# gitdb

./: Cargo.toml  LICENCE  README.md
src/: lib.rs  main.rs
src/catalog/: manager.rs  mod.rs  schema.rs  types.rs
src/db/: api.rs  connection.rs  mod.rs  repl.rs
src/executor/: error.rs  eval.rs  executor.rs  mod.rs  operators.rs  result.rs
src/planner/: error.rs  logical.rs  mod.rs  optimizer.rs  physical.rs  planner.rs
src/sql/: ast.rs  error.rs  mod.rs  parser.rs
src/storage/: blob.rs  commit.rs  errors.rs  mod.rs  refs.rs  repository.rs  tree.rs  types.rs
src/transaction/: context.rs  error.rs  isolation.rs  manager.rs  mod.rs
