[package]
name = "GitDB"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20.2"
serde = { version = "1.0.228", features = ["derive"] }
ulid = "1.2.1"
thiserror = "2.0.17"
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
tempfile = "3.23.0"
parking_lot = "0.12.5"
sqlparser = "0.55"